--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta description-->
+    <meta name="description" content="Descubri los mejores productos para el cuidado del cabello y la lenceria femenina en By Gio. Encontra lo que necesitas para sentirte bella. Compra ahora y sorpréndete con nuestra calidad y atención al cliente.">
+    <!--meta keywords-->
+    <meta name="keywords" content="cuidado del cabello lenceria femenina moda femenina tienda online belleza">
+
+<!--favicon-->
+<link rel="icon" href="img/logo.png" type="png" sizes="100">
 
 <!--Link de Bootstrap-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -24,7 +31,7 @@
         <!-- Menu de Navegacion de Bootstrap-->
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand justify-content-center" href="#"><img src="img/logo.png" alt="Logo By Gio"></a>
+                <a class="navbar-brand justify-content-center" href="index.html"><img src="img/logo.png" alt="Logo By Gio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -64,18 +71,19 @@
         <div class="contenedor-portadas">
             <div class="portada-uno">
                 <a href="pages/haircare.html">
-                    <img class="img-uno" src="img/portada-bygiohaircare.png" alt="Portada Haircare">
+                    <img class="img-uno" src="img/portada-bygiohaircare.png" alt="Imagen de portada By Gio Haircare">
                 </a>
                 <p class="parrafos-portadas">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, beatae dolores! Optio inventore omnis ullam consequatur fuga, maxime, amet fugit itaque nam, eligendi facere ad? Harum recusandae numquam magni quibusdam!
+                    ¡Te invitamos a nuestra página web de productos capilares! Aquí encontrarás una amplia selección de tratamientos para el cabello que te ayudarán a lograr un cabello hermoso y saludable. 
                 </p>
             </div>
             <div class="portada-dos">
                 <a href="pages/intimate.html">
-                    <img class="img-dos" src="img/portada-bygiointimate.png" alt="Portada Intimate">
+                    <img class="img-dos" src="img/portada-bygiointimate.png" alt="Imagen de portada By Gio Intimate">
                 </a>
                 <p class="parrafos-portadas">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, beatae dolores! Optio inventore omnis ullam consequatur fuga, maxime, amet fugit itaque nam, eligendi facere ad? Harum recusandae numquam magni quibusdam!
+                    Visitá nuestra tienda en línea de conjuntos de ropa interior femenina. Ofrecemos una gran variedad de estilos y diseños para todos los gustos y talles.
+                    Todos nuestros conjuntos poseen la mejor calidad para hacerlos sentir suaves y cómodos contra la piel. 
                 </p>
             </div>
         </div>
@@ -88,13 +96,13 @@
                 <h2>Buscanos en Nuestras Redes!</h2>
             </li>
             <li>
-                <img src="img/boton-email.png" alt="email">
+                <img src="img/boton-email.png" alt="imagen boton de email">
             </li>
             <li>
-                <img src="img/boton-instagram.png" alt="instragram">
+                <img src="img/boton-instagram.png" alt="imagen boton de instragram">
             </li>
             <li>
-                <img src="img/boton-whatsapp.png" alt="whatsapp">
+                <img src="img/boton-whatsapp.png" alt="imagen boton de whatsapp">
             </li>
         </ul>
         
