--- a/pages/haircare.html
+++ b/pages/haircare.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta description-->
+    <meta name="description" content="Cuida tu cabello como se merece con los productos de calidad que encontraras en By Gio Haircare. Tenemos todos los productos para brindarte tratamiento perfecto para vos">
+    <!--meta keywords-->
+    <meta name="keywords" content="cuidado del cabello capilares shampoo acondicionador nutricion oro liquido nanoplastia alisado formol">
+<!--favicon-->
+<link rel="icon" href="img/logo.png" type="png" sizes="100">
 
 <!--Link de Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -23,7 +29,7 @@
         <!-- Menu de Navegacion de Bootstrap-->
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
-                <a class="navbar-brand justify-content-center" href="#"><img src="../img/logo.png" alt="Logo By Gio"></a>
+                <a class="navbar-brand justify-content-center" href="../index.html"><img src="../img/logo.png" alt="Logo By Gio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -62,60 +68,85 @@
 
         <div class="contenedor-parrafos-haircare">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit inventore fugiat vitae tempore enim, minus, voluptas placeat aliquam perspiciatis eum mollitia qui debitis exercitationem quos ducimus similique esse praesentium voluptatibus.
+                Ofrecemos una variedad de opciones, desde alisados con y sin formol,y tratamientos de shock de queratina hasta productos de nutrición y nanoplastia. Con nuestra línea de oro líquido, podrás agregar brillo y luminosidad a tu cabello, mientras que nuestros tratamientos de nutrición y reparación ayudarán a fortalecer y revitalizar tu cabello dañado. 
          </p>
       
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quod repudiandae totam sed voluptatem eligendi dolores sunt doloribus error nam accusantium, beatae corporis atque ea consequatur eum, qui laudantium! Porro!
+                Nuestros productos están formulados para brindarte resultados excepcionales y duraderos. 
+                ¡Explorá nuestra página y encontrá el tratamiento perfecto para vos! 
             </p>
         </div>
         <div class="contenedor-productos-hc">
             <div class="producto-hc">
-                <img class="img-hc" src="../img/alisado-biomolecular.png" alt="alisado biomolecular">
+                <img class="img-hc" src="../img/alisado-biomolecular.png" alt="imagen de producto alisado biomolecular">
                 <h3>
-                $Precio
+                    $1700 - 500Ml  
+                </h3>
+                <h3>
+                    $1000 - 250Ml
                 </h3>
             </div>
             <div class="producto-hc">
-                <img class="img-hc" src="../img/alisado-botox.png" alt="alisado botox">
+                <img class="img-hc" src="../img/alisado-botox.png" alt="imagen de producto alisado botox">
                 <h3>
-                $Precio
+                    $1700 - 500Ml  
+                </h3>
+                <h3>
+                    $1000 - 250Ml
                 </h3>
             </div>
             <div class="producto-hc">
-                <img class="img-hc" src="../img/alisado-cereza.png" alt="alisado cereza">
+                <img class="img-hc" src="../img/alisado-cereza.png" alt="imagen de producto alisado cereza">
                 <h3>
-                $Precio
+                    $1700 - 500Ml  
+                </h3>
+                <h3>
+                    $1000 - 250Ml
                 </h3>
             </div>
             <div class="producto-hc">
-                <img class="img-hc" src="../img/alisado-queratinico.png" alt="alisado queratinico">
+                <img class="img-hc" src="../img/alisado-queratinico.png" alt="imagen de producto alisado queratinico">
                 <h3>
-                $Precio
+                    $1700 - 500Ml  
+                </h3>
+                <h3>
+                    $1000 - 250Ml
                 </h3>
             </div>
             <div class="producto-hc">
-                <img class="img-hc" src="../img/nanoplastia.png" alt="nanoplastia">
+                <img class="img-hc" src="../img/nanoplastia.png" alt="imagen de producto nanoplastia">
                 <h3>
-                $Precio
+                    $1700 - 500Ml  
+                </h3>
+                <h3>
+                    $1000 - 250Ml
                 </h3>
             </div>
             <div class="producto-hc">
-                <img class="img-hc" src="../img/nutricion-multi.png" alt="nut multivitaminica">
+                <img class="img-hc" src="../img/nutricion-multi.png" alt="imagen de producto nut multivitaminica">
                 <h3>
-                $Precio
+                    $1700 - 500Ml  
+                </h3>
+                <h3>
+                    $1000 - 250Ml
                 </h3>
             </div>
             <div class="producto-hc">
-                <img class="img-hc" src="../img/Oro-liquido.png" alt="oro liquido">
+                <img class="img-hc" src="../img/Oro-liquido.png" alt="imagen de producto oro liquido">
                 <h3>
-                $Precio
+                    $1700 - 500Ml  
+                </h3>
+                <h3>
+                    $1000 - 250Ml
                 </h3>
             </div>
             <div class="producto-hc">
-                <img class="img-hc" src="../img/shock-queratina.png"alt="shock de queratina">
+                <img class="img-hc" src="../img/shock-queratina.png"alt="imagen de producto shock de queratina">
                 <h3>
-                $Precio
+                    $1700 - 500Ml  
+                </h3>
+                <h3>
+                    $1000 - 250Ml
                 </h3>
             </div>                  
         </div>
@@ -128,13 +159,13 @@
                 <h2>Buscanos en Nuestras Redes!</h2>
             </li>
             <li>
-                <img src="../img/boton-email.png" alt="email">
+                <img src="../img/boton-email.png" alt="imagen boton de email">
             </li>
             <li>
-                <img src="../img/boton-instagram.png" alt="instragram">
+                <img src="../img/boton-instagram.png" alt="imagen boton de instragram">
             </li>
             <li>
-                <img src="../img/boton-whatsapp.png" alt="whatsapp">
+                <img src="../img/boton-whatsapp.png" alt="imagen boton de whatsapp">
             </li>
         </ul>
         
