--- a/pages/intimate.html
+++ b/pages/intimate.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta description-->
+    <meta name="description" content="La lenceria femenina mas sensual esta en nuestra tienda By Gio Intimates. Tenemos una amplia variedad de modelos y talles para que te sientas hermosa y segura de ti misma. Comprá ahora y sorprendete con nuestra calidad y atención">
+    <!--meta keywords-->
+    <meta name="keywords" content="lenceria femenina ropa interior tanga corpiño sexy intima mujer">
+<!--favicon-->
+<link rel="icon" href="img/logo.png" type="png" sizes="100">
 
 <!--Link de Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -23,7 +29,7 @@
         <!-- Menu de Navegacion de Bootstrap-->
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
-                <a class="navbar-brand justify-content-center" href="#"><img src="../img/logo.png" alt="Logo By Gio"></a>
+                <a class="navbar-brand justify-content-center" href="../index.html"><img src="../img/logo.png" alt="Logo By Gio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -62,66 +68,66 @@
 
         <div class="contenedor-parrafos-intimates">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit inventore fugiat vitae tempore enim, minus, voluptas placeat aliquam perspiciatis eum mollitia qui debitis exercitationem quos ducimus similique esse praesentium voluptatibus.
+                 Ya sea que estés buscando algo sexy y seductor o algo más cómodo para el día a día, tenemos algo para vos. Ofrecemos una amplia selección de conjuntos a juego en diferentes estilos, desde encajes delicados hasta estampados divertidos y coquetos. 
          </p>
       
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quod repudiandae totam sed voluptatem eligendi dolores sunt doloribus error nam accusantium, beatae corporis atque ea consequatur eum, qui laudantium! Porro!
+                ¡Explora nuestra selección y encontrá el conjunto perfecto para lucir hermosa, segura y cómoda en todo momento!
             </p>
         </div>
         <div class="contenedor-productos-intimates">
             <div class="producto-intimates">
-                <img class="img-intimates" src="../img/conjunto-uno.jpg" alt="conjunto uno">
+                <img class="img-intimates" src="../img/conjunto-uno.jpg" alt="imagen de conjunto de lenceria femenina, floreado con bordes blancos">
                 <h3>
-                    conjunto uno
+                    Conjunto Uno
                 </h3>
                 <h4>
-                    $precio
+                    $2800
                 </h4>
             </div>
             <div class="producto-intimates">
-                <img class="img-intimates" src="../img/conjunto-dos.jpg" alt="conjunto dos">
+                <img class="img-intimates" src="../img/conjunto-dos.jpg" alt="imagen de conjunto de lenceria femenina, floreado con fondo oscuro con bordes blancos">
                 <h3>
-                    conjunto dos
+                    Conjunto Dos
                 </h3>
                 <h4>
-                    $precio
+                    $2800
                 </h4>
             </div>
             <div class="producto-intimates">
-                <img class="img-intimates" src="../img/conjunto-tres.jpg" alt="conjunto tres">
+                <img class="img-intimates" src="../img/conjunto-tres.jpg" alt="imagen de conjunto de lenceria femenina, aterciopleado rojo con bordes negros">
                 <h3>
-                    conjunto tres
+                    Conjunto Tres
                 </h3>
                 <h4>
-                    $precio
+                    $2800
                 </h4>
             </div>
             <div class="producto-intimates">
-                <img class="img-intimates" src="../img/conjunto-cuatro.jpg" alt="conjunto cuatro">
+                <img class="img-intimates" src="../img/conjunto-cuatro.jpg" alt="imagen de conjunto de lenceria femenina, color negro marca simona">
                 <h3>
-                    conjunto cuatro
+                    Conjunto Cuatro
                 </h3>
                 <h4>
-                    $precio
+                    $2800
                 </h4>
             </div>
             <div class="producto-intimates">
-                <img class="img-intimates" src="../img/combo-uno.jpg" alt="combo uno">
+                <img class="img-intimates" src="../img/combo-uno.jpg" alt="imagen de combo de 3 prendas inferiores de lenceria femenina, marca simona. Floreada con bordes negros - negra con detalles en rojo - estampado azul con bordes blancos">
                 <h3>
-                    combo uno
+                    Combo Simona Uno
                 </h3>
                 <h4>
-                    $precio
+                    $3000
                 </h4>
             </div>
             <div class="producto-intimates">
-                <img class="img-intimates" src="../img/combo-dos.jpg" alt="combo dos">
+                <img class="img-intimates" src="../img/combo-dos.jpg" alt="imagen de combo de 3 prendas inferiores de lenceria femenina, marca simona. Azul - rosa - estampado leopardo gris">
                 <h3>
-                    combo dos
+                    Combo Simona Dos
                 </h3>
                 <h4>
-                    $precio
+                    $3000
                 </h4>
             </div>               
         </div>
@@ -134,13 +140,13 @@
                 <h2>Buscanos en Nuestras Redes!</h2>
             </li>
             <li>
-                <img src="../img/boton-email.png" alt="email">
+                <img src="../img/boton-email.png" alt="imagen boton de email">
             </li>
             <li>
-                <img src="../img/boton-instagram.png" alt="instragram">
+                <img src="../img/boton-instagram.png" alt="imagen boton de instragram">
             </li>
             <li>
-                <img src="../img/boton-whatsapp.png" alt="whatsapp">
+                <img src="../img/boton-whatsapp.png" alt="imagen boton de whatsapp">
             </li>
         </ul>
         
