--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta description-->
+    <meta name="description" content="Descubri nuestra historia, valores y compromiso con la belleza y la moda femenina en By Gio. Somos tu mejor opción">
+    <!--meta keywords-->
+    <meta name="keywords" content="nuestra empresa nuestra historia sobre nosotros valores lenceria femenina productos cabello capilares compromiso calidad">
+    <!--favicon-->
+    <link rel="icon" href="img/logo.png" type="png" sizes="100">
 
    <!--Link de Bootstrap-->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -23,7 +29,7 @@
         <!-- Menu de Navegacion de Bootstrap-->
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
-                <a class="navbar-brand justify-content-center" href="#"><img src="../img/logo.png" alt="Logo By Gio"></a>
+                <a class="navbar-brand justify-content-center" href="../index.html"><img src="../img/logo.png" alt="Logo By Gio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -63,22 +69,24 @@
         
         <div class="contenedor-parrafos-nosotros">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus voluptates magnam incidunt eveniet! Nemo, cupiditate nobis? Molestias, dignissimos qui. Doloribus, laboriosam numquam? Quasi eaque alias omnis maxime aspernatur quia!
+                Somos un pequeño proyecto familiar ubicado en la zona de Don Torcuato, comprometidos en brindar la mejor atención a nuestros clientes. 
             </p>
             <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, quidem! Corporis laudantium ducimus dolore expedita asperiores! Maiores in quibusdam voluptatem temporibus, ex earum ipsa laboriosam recusandae repudiandae quae dicta accusantium?
+                En nuestra tienda, encontrarás una amplia variedad de productos de alta calidad para el cuidado del cabello femenino, desde alisados y tratamientos de queratina hasta productos de nutrición y reparación.  
+                Y también ofrecemos una selección de conjuntos de ropa interior femenina en diferentes estilos y talles.
             </p>
             <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt eaque reiciendis deleniti mollitia voluptas asperiores aliquam illum non maiores, dolor enim itaque a necessitatibus accusamus distinctio harum? At, nam culpa.
+                Nos esforzamos por satisfacer las necesidades de nuestros clientes, ofreciendo un servicio personalizado y dedicado.
+                Ya sea que estés buscando algo para el cuidado de tu cabello o para lucir hermosa y cómoda con nuestra ropa interior, en nuestra tienda encontrarás todo lo que necesitas. ¡Gracias por apoyar nuestro pequeño emprendimiento!
             </p>
         </div>
 
         <div class="contenedor-img-nosotros">
             <div>
-                <img class="img-nosotros" src="../img/sobre-nosotros-capilares.png" alt="muchos productos capilares">
+                <img class="img-nosotros" src="../img/sobre-nosotros-capilares.png" alt="imagen de muchos productos capilares">
             </div>
             <div>
-                <img class="img-nosotros" src="../img/sobre-nosotros-lenceria.png" alt="imagen mucha lenceria">
+                <img class="img-nosotros" src="../img/sobre-nosotros-lenceria.png" alt="imagen de mucha lenceria">
             </div>   
         </div>  
 
@@ -91,13 +99,13 @@
                 <h2>Buscanos en Nuestras Redes!</h2>
             </li>
             <li>
-                <img src="../img/boton-email.png" alt="email">
+                <img src="../img/boton-email.png" alt="imagen boton de email">
             </li>
             <li>
-                <img src="../img/boton-instagram.png" alt="instragram">
+                <img src="../img/boton-instagram.png" alt="imagen boton de instragram">
             </li>
             <li>
-                <img src="../img/boton-whatsapp.png" alt="whatsapp">
+                <img src="../img/boton-whatsapp.png" alt="imagen boton de whatsapp">
             </li>
         </ul>
         
