modificando hoja de contacto y agregando nuevas imagenes de iconos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -68,7 +68,7 @@
     <main class="main-contacto">
 
         <div class="contenedor-contacto">
-            <div class="info-formulario animate__rubberBand">
+            <div class="info-formulario">
                 <h1 class="animate__animated animate__rubberBand">
                     Contacto
                 </h1>
@@ -76,9 +76,18 @@
                 <h2 class="animate__animated animate__rubberBand"> 
                     Comunicate con nosotros!
                 </h2>
-                <p>1161273824</p>
-                <p>pnnunez29@gmail.com</p>
-                <p>Don Torcuato, Tigre</p>
+                <div>
+                    <img src="../img/whatsapp.png" alt="imagen de icono de whatsapp">
+                    1161273824
+                </div>
+                <div>
+                    <img src="../img/gmail.png" alt="imagen de icono de gmail">
+                    pnnunez29@gmail.com
+                </div>
+                <div>
+                    <img src="../img/mapa.png" alt="imagen de icono de ubicacion - casita">
+                    Don Torcuato, Tigre
+                </div>
             </div>
 
             <form action="#" autocomplete="off">
