cambios en el footer

--- a/pages/intimate.html
+++ b/pages/intimate.html
@@ -137,7 +137,7 @@
     <footer>
         <ul>
             <li>
-                <h2>Buscanos en Nuestras Redes!</h2>
+                <p>Buscanos en Nuestras Redes!</p>
             </li>
             <li>
                 <img src="../img/boton-email.png" alt="imagen boton de email">
